# crediblend

./: Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: cli_flags.md
examples/: oof_modelA.csv  oof_modelA_time.csv  oof_modelB.csv  oof_modelB_time.csv  sub_modelB.csv  sub_modelB_time.csv
runs/ci_advanced/: best_submission.csv  meta.json  methods.csv  report.html
runs/ci_pdf/: blend_summary.json  meta.json  report.html
runs/ci_test/: meta.json  report.html
runs/ci_time/: meta.json  report.html
runs/demo/: best_submission.csv  methods.csv  report.html
runs/final_test/: meta.json  report.html
runs/v03/: report.html
runs/v03_time/: decorrelation_info.json  report.html
runs/v03_time_test/: report.html
runs/v04/: blend_summary.json  meta.json  report.html
runs/v05_test/: meta.json  report.html
runs/v10_test/: best_submission.csv  meta.json  methods.csv  report.html
src/crediblend/: api.py  cli.py
src/crediblend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/crediblend/core/: blend.py  decorrelate.py  io.py  report.py  stability.py
src/crediblend/templates/: report.html.j2
tests/: test_smoke.py  test_stacking.py  test_weights.py
tests/perf/: test_perf_medium.py
