[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crediblend"
version = "0.1.0"
description = "A minimal CLI tool for blending machine learning predictions"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=1.3.0",
    "numpy>=1.21.0",
    "scikit-learn>=1.0.0",
    "jinja2>=3.0.0",
    "click>=8.0.0",
    "scipy>=1.7.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    "weasyprint>=60.0",
    "pydantic>=1.10.0,<3.0.0",
    "joblib>=1.2.0",
    "psutil>=5.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0.0",
    "pytest-cov>=2.0.0",
]

[project.scripts]
crediblend = "crediblend.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"
